@@ -1,0 +1,22 @@
+
+<h2>LilyPond's features</h2>
+
+This list is <em>incomplete</em>.  See the
+<a href="/manual">user manual</a> for more information.
+
+<ul>
+<li>Free Software
+<li>Beautiful printed music
+<li>Runs on GNU/Linux, MacOS X, and all non-prerelease flavours of
+Microsoft Windows (thanks to Cygwin).
+<li>PDF output, PostScript output
+<li>Open, portable input format
+<li>Active user community
+<li>Printing text with music by seamless integration with LaTeX
+<li>GUI support by Denemo, NoteEdit, Rosegarden (experimental)
+<li>Simple MIDI output
+<li>Full control through GUILE scripting
+<li>XML output
+<li>Scalable music font
+<li>ABC input filter
+</ul>
